WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27399
DRT doesn't reliably snapshot composited layers
https://bugs.webkit.org/show_bug.cgi?id=27399
Summary
DRT doesn't reliably snapshot composited layers
Simon Fraser (smfr)
Reported
2009-07-17 17:52:31 PDT
DRT pixel tests don't reliably grab composited layers. Sometimes all the layer content is missing from the snapshot.
Attachments
Patch, changelog
(3.31 KB, patch)
2009-07-17 18:11 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-07-17 18:11:07 PDT
Created
attachment 32994
[details]
Patch, changelog
Simon Fraser (smfr)
Comment 2
2009-07-18 09:59:29 PDT
http://trac.webkit.org/changeset/46092
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug