2009-07-17  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        DRT doesn't reliably snapshot composited layers
        https://bugs.webkit.org/show_bug.cgi?id=27399

        If we're doing an "onscreen" pixel capture, it means that we're snapshotting a view
        with composited content. In that case we need to force the view to display so that
        the composited layers are rendered to the screen.

        * DumpRenderTree/mac/PixelDumpSupportMac.mm:
        (createBitmapContextFromWebView):

Canonical link: https://commits.webkit.org/37713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46092 268f45cc-cd09-0410-ab3c-d52691b4dbfc